--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 #divRow {
   width: 1000px;
   height: 600px;
-  box-shadow: 0px 0px 300px #fee55a;
+  box-shadow: 0px 0px 300px rgb(254 229 90);
   border: 1px solid;
   border-radius: 20px;
   background-color: rgba(0, 0, 0, 0.799); 
